--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "dotenv": "16.4.7",
     "framer-motion": "^12.0.0",
     "graphql": "^16.8.1",
-    "next": "15.1.0",
+    "next": "15.1.11",
     "payload": "3.70.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-hook-form": "^7.54.0",
     "sharp": "0.33.5",
     "zod": "^3.24.0"
@@ -46,9 +46,10 @@
     "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "15.1.11",
     "jsdom": "25.0.1",
     "playwright": "1.49.0",
+    "playwright-core": "1.49.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
