--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@hookform/resolvers": "^4.1.0",
     "@payloadcms/db-postgres": "3.70.0",
     "@payloadcms/next": "3.70.0",
-    "@payloadcms/plugin-cloud-storage": "^3.72.0",
+    "@payloadcms/plugin-cloud-storage": "3.70.0",
     "@payloadcms/richtext-lexical": "3.70.0",
-    "@payloadcms/storage-s3": "^3.72.0",
+    "@payloadcms/storage-s3": "3.70.0",
     "@payloadcms/storage-vercel-blob": "3.70.0",
     "@payloadcms/ui": "3.70.0",
     "@tailwindcss/postcss": "^4.0.0",
